syntax = "proto3";

package zksync.config.via_secrets;

import "zksync/config/secrets.proto";

message ViaL1Secrets {
    optional string rpc_url = 1;
    optional string rpc_user = 2;
    optional string rpc_password = 3;
}

message ViaL2Secrets {
    optional string rpc_url = 1;
}

message ViaDASecrets {
    optional string api_node_url = 1;
    optional string auth_token = 2;
}

message ViaSecrets {
  config.secrets.Secrets base_secrets = 1;
  optional ViaL1Secrets via_l1 = 2;
  optional ViaL2Secrets via_l2 = 3;
  optional ViaDASecrets via_da = 4;
}
